<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pearsonal Fitness Trainer</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_login">Please login</string>
    <string name="sign_out_button">Sign out</string>
    <string name="desc_logo">App logo</string>
    <string name="status_sign_in">Logged in as %s</string>
    <string name="status_sign_out">Unknown user</string>
    <string name="text_height">Height (cm)</string>
    <string name="text_weight">Weight (kg)</string>
    <string name="title_fragmentd_birthdate">Set your birthdate</string>
    <string name="title_fragmentd_basicinfo">Tell us something about you</string>
    <string name="title_fragmentd_workout">Set your workout info</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="experience">Set your experience</string>
    <string name="goal">Set your goal</string>
    <string name="createT_button">Create training</string>
    <string name="chooseT_button">Recommended training</string>
    <string name="add_button">Add</string>
    <string name="text_addworkout">Workout name</string>
    <string name="text_addtraining">Training name</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="text_repetition">Repetition</string>
    <string name="text_pause">Pause (s)</string>
    <string name="start_button">Start training</string>
    <string name="exercise_button">Exercises</string>
    <string name="statistic_button">Statistics</string>
    <string name="measure_button">Measures</string>
    <string name="exit_button">Exit</string>
    <string name="video_button">Video</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="currentSerie_text">Serie #%s</string>
    <string name="finish_exercise">Finish exercise</string>
    <string name="ok_button">Ok</string>
    
    <string-array name="experience_array">
        <item>Beginner</item>
        <item>Advanced</item>
        <item>Experienced</item>
    </string-array>
    
    <string-array name="goal_array">
        <item>Lose fat</item>
        <item>Gain strength</item>
        <item>Bulking</item>
        <item>Cutting</item>
    </string-array>
    
    <string-array name="measure_array">
        <item>Height</item>
        <item>Weight</item>
    </string-array>

</resources>
