<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/experience_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experience"/>
    <Spinner 
        android:id="@+id/experience_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:id="@+id/goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"/>
    <Spinner 
        android:id="@+id/goal_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        style="?android:attr/buttonBarStyle">
        <Button 
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button 
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
