<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/height_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_height"/>
	    <EditText 
	        android:id="@+id/height_etext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"/>

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/weight_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_weight"/>
        <EditText 
	        android:id="@+id/weight_etext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"/>
    </LinearLayout>
    
    <RadioGroup 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton 
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>
