<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/recordName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center" />
    
    <TextView
        android:id="@+id/recordSerie_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/weight_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/weight_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_weight" />

        <EditText
            android:id="@+id/weight_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/rep_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/rep_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_repetition" />

        <EditText
            android:id="@+id/rep_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/pause_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/pause_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_pause" />

        <EditText
            android:id="@+id/pause_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />
    
    <Button
        android:id="@+id/stop_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:visibility="gone" />
    
    <Button
        android:id="@+id/finish_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_exercise"
        android:visibility="gone" />

</LinearLayout>
