<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.cvut.fjfi.kse.pft.LoginActivity$PlaceholderFragment" >

    <ImageView 
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_logo" />
    
    <TextView 
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/logo_imageView"
	    android:text="@string/text_login" />
    
    <com.google.android.gms.common.SignInButton
	    android:id="@+id/sign_in_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/sign_in_text" />
    
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_text"
        android:layout_toRightOf="@+id/sign_in_button"
        android:text="@string/sign_out_button"
        android:visibility="gone" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/sign_in_button">
        
        <TextView 
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/status_sign_out" />
        
    </LinearLayout>
    
    

</RelativeLayout>
